--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/cli": "^4.0.4",
     "cra-template-typescript": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-icons": "^5.4.0",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +42,6 @@
     "@types/react-dom": "^19.0.3",
     "@types/testing-library__react": "^10.0.1",
     "daisyui": "^4.12.23",
-    "tailwindcss": "^4.0.4"
+    "tailwindcss": "^3.4.17"
   }
 }
